syntax = "proto3";
package orders;
option go_package="github.com/smugglerv1/order_app/api/orders";

service OrderService{
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){
  }
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse){
  }
}

message Order{
  int32 orderId=1;
  int32 customerId=2;
  int32 productId=3;
  int32 quantity=5;
}

message CreateOrderRequest{
  int32 customerId=1;
  int32 productId=2;
  int32 quantity=3;
}
message CreateOrderResponse{
  string status=1;
}
message GetOrderRequest{
   int32 customerId=1;

}
message GetOrderResponse{
  repeated Order orders=1;
}